Standarize desc message in qqq.json
Use the [[Template:Desc]] from translatewiki.net

Change-Id: I29fa2846f25954b8fac68687067c9e3c6443af7e

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -2,5 +2,5 @@
 	"@metadata": {
 		"authors": ["Kris Blair (Cblair91)"]
 	},
-	"importarticles-desc": "Extension description"
+	"importarticles-desc": "{{desc|name=ImportArticles|url=https://www.mediawiki.org/wiki/Extension:ImportArticles}}"
 }
