build: Updating dependencies
composer:
* mediawiki/mediawiki-codesniffer: 34.0.0 → 35.0.0
* mediawiki/minus-x: 1.1.0 → 1.1.1

npm:
* eslint-config-wikimedia: 0.17.0 → 0.18.1

Additional changes:
* Removing manual extensions for eslint.

Change-Id: Ib9db3e69b8b2f235ab89c24dba158336cb05ec53

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,6 +1,8 @@
 {
 	"@metadata": {
-		"authors": ["Kris Blair (Cblair91)"]
+		"authors": [
+			"Kris Blair (Cblair91)"
+		]
 	},
 	"importarticles-desc": "Allow the usage of ImportArticles JavaScript to import multiple pages at once"
 }
